# mic_to_whisper

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: mic_to_whisper.launch
scripts/: mic_node.py  whisper_node.py
src/: mic_node.py  transcription_viewer_node.py  whisper_node.py
