<?xml version="1.0"?>
<package format="2">
  <name>mic_to_whisper</name>
  <version>0.0.1</version>
  <description>ROS package for microphone audio input and Whisper transcription</description>

  <maintainer email="etsa@seas.upenn.edu">Ethan Sanchez</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
